css/calculator.css
* {
    box-sizing: border-box;
}

.output {
    grid-area: output;
    background-color: black;
    color: white;
}

.clear {
    grid-area: clear;
}

.backspace {
    grid-area: backspace;
}

.actions {
    display: grid;
    grid-template-areas:
    "clear backspace";
    grid-template-columns: 2fr 1fr;
}

.operands {
    display: grid;
    width: 100%;
    grid-area: operands;
    background-color: aqua;
}

.numbers {
    display: grid;
    width: 100%;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 3fr;
}

.zero {
    grid-column-start: 1;
    grid-column-end: 4;
}

.calculator {
    display: grid;
    width: 100%;
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    grid-template-areas:
    "output output"
    "actions operands"
    "numbers operands"
    "zero operands";
    grid-template-columns: 2fr 1fr;
}

button {
    background-color: rgb(219, 215, 215);
    border-color: rgb(219, 215, 215);
}

